fixing up expand/collapse animation

--- a/autom8_client_node/client/css/firefox.less
+++ b/autom8_client_node/client/css/firefox.less
@@ -1,7 +1,7 @@
 @import "mixins.less";
 
 .firefox {
-    .device-group-devices {
+    .panel {
         .transform(translate3d(0, 0, 0));
     }
 
